<resources>
    <string name="app_name">Pop Movies</string>
    <string name="action_sort_by_popularity">Sort by most popularity</string>
    <string name="action_sort_by_rate">Sort by highest rate</string>
    <string name="movie_title">Movie Title</string>
    <string name="release_date">Release Date</string>
    <string name="vote_average">Vote Average:</string>
    <string name="plot_synopsis">Plot Sinopsis</string>
    <string name="movie_image">Movie Image</string>
</resources>
