<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_movie_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.nadavperetz.popularmovies.MovieDetails">



    <TextView
        android:text="@string/movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/movie_title"
        android:textSize="36sp"
        android:paddingLeft="24dp"
        android:paddingStart="24dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:textStyle="normal|bold"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/background_light" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/interestelar"
            android:id="@+id/movie_image"
            android:contentDescription="@string/movie_image"
            android:paddingLeft="24dp"
            android:paddingTop="24dp"
            android:paddingRight="24dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/release_date"
                android:text="@string/release_date"
                android:textSize="24sp"
                android:textStyle="normal|bold"
                android:paddingTop="24dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vote_average_number"
                android:text="@string/vote_average"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="1"
                android:paddingTop="24dp" />

        </LinearLayout>
    </LinearLayout>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/plot_synopsis"
        android:text="@string/plot_synopsis"
        android:paddingLeft="24dp"
        android:paddingStart="24dp"
        android:layout_weight="1"/>




</LinearLayout>
